# small-mcftle

./: LICENSE  README
demo_cpu/: CMakeLists.txt  camera.hpp  flow.hpp  frame.hpp  main.cpp  math.hpp  timer.hpp
demo_gpu/: CMakeLists.txt  camera.hpp  cbuffer.hpp  d3d.hpp  flow.hlsli  frame.hpp  main.cpp  math.hpp  mcftle.hlsl  params.hlsli  random.hlsli  timer.hpp
demo_gpu/cmake/: FindDirectX.cmake
